# ESP32-P4-ENOSE

./: .gitignore  CMakeLists.txt  P4_cloud_ai_auto_control_tech_doc.md  PROJECT_FEATURE_REPORT.md  PROJECT_REPORT_SUMMARY.md  PROJECT_SUMMARY.md  README.md  UDP_S3_INTEGRATION_GUIDE.md  esp32_p4_s3_system_knowledge_base.md  esp32_p4_showcase.html  git_diff_ui.txt  jully_voice_json_control_solutions.md  nebula_clock.html  nebula_showcase.html  p4_cloud_protocol_production.md  p4_ota_and_control_server_guide.md  p4_peripheral_cloud_protocol_extension_guide.md  p4_servo_lid_cloud_protocol_spec.md  p4_tts_broadcast_server_protocol.md  s3_model_deployment_spec.md  sdkconfig.defaults  temp_old_ui.cpp  挑战杯项目概要_机器人嗅觉系统.txt  新建 文本文档.txt  项目概要_gemini.txt
S3-core/: CODE_REPORT.md  RECEIVER_PLAN.md  atomization.h  ble_manager.h  config.h  display_manager.h  espnow-receiverv2-s3.ino  fan_control.h  fix_prec2.py  fix_precision.py  model_runner.h  model_updater.h  relay_control.h  sd_manager.h  serial_cmd.h  servo_control.h  tdm_test.h  tft_user_setup.h  web_server.h
S3-core/.theia/: launch.json
ble_sender_s3/: ble_sender_s3.ino
components/bme680_sensor/: CMakeLists.txt  bme680.c  bme680.h
components/bsp_extra/src/: bsp_board_extra.c
components/electronic_nose_gateway/: CMakeLists.txt  Kconfig  electronic_nose_gateway.c
components/electronic_nose_gateway/include/: electronic_nose_gateway.h
components/espressif__esp32_p4_function_ev_board_noglib/: esp32_p4_function_ev_board.c
components/micro_opus/: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml  library.json
components/micro_opus/.github/workflows/: ci.yml  publish.yml  release-drafter.yml
components/micro_opus/cmake/: config.h.in  esp-idf.cmake  functions.cmake  host.cmake  sources.cmake  staging.cmake
components/micro_opus/examples/decode_benchmark/: CMakeLists.txt  README.md  convert_opus.py  sdkconfig.defaults
components/micro_opus/examples/decode_benchmark/src/: CMakeLists.txt  decode_benchmark.cpp  test_audio_music.h  test_audio_speech.h
components/micro_opus/examples/encode_benchmark/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
components/micro_opus/examples/encode_benchmark/src/: CMakeLists.txt  encode_benchmark.cpp  test_audio_music.h  test_audio_speech.h
components/micro_opus/host_examples/opus_to_wav/: CMakeLists.txt  README.md  TESTING.md  build_with_sanitizers.sh  opus_to_wav.cpp  wav_writer.cpp  wav_writer.h
components/micro_opus/host_examples/opus_to_wav/test/: measure_zerocopy.cpp  test_chunked.cpp  test_silent_channels.cpp
components/micro_opus/include/micro_opus/: ogg_opus_decoder.h
components/micro_opus/lib/micro-ogg-demuxer/.github/workflows/: ci.yml  release-drafter.yml
components/micro_opus/patches/: README.md  bands_timing.c  celt_decoder_timing.c  celt_timing.h  custom_support.h  pvq_timing.h  quant_bands_timing.h  stack_alloc.h  thread_local_stack.c  thread_local_stack.h  vq_quant_bands_timing.c  vq_timing.c
components/micro_opus/patches/celt/xtensa/: fixed_lx7.h  mathops_lx7.c  mathops_lx7.h  pitch_lx7.h
components/micro_opus/patches/diffs/: bands_timing.patch  celt_arch.patch  celt_celt.patch  celt_mathops.patch  celt_pitch.patch  celt_stack_alloc.patch  celt_timing.patch  pvq_timing.patch  silk_SigProc_FLP.patch  stack_alloc.patch  vq_quant_bands_timing.patch
components/micro_opus/patches/silk/xtensa/: SigProc_FLP_lx7.h
components/micro_opus/script/: clang-tidy.sh
components/micro_opus/src/: ogg_opus_decoder.cpp  opus_header.cpp  opus_header.h
components/volc_conv_ai/cmake/: common.cmake  espressif.cmake
components/volc_conv_ai/osal/src/espressif/: volc_osal.c
components/volc_conv_ai/src/base/: volc_device_manager.c
components/volc_conv_ai/src/transports/low_load/src/: volc_ws.c
docs/: P4-C6-UART-Protocol.md  QR_SCAN_REQUIREMENTS.md  project_background_and_tech_spec.md  video_production_guide.md  voiceover_teleprompter_script.md
espnow-receiver-s3/: espnow-receiver-s3.ino  partitions.csv
main/: CMakeLists.txt  Kconfig.projbuild  app_system.c  app_system.h  app_video.c  app_video.h  ble_central.cpp  ble_central.h  cloud_sync.cpp  cloud_sync.h  csv_buffer.h  idf_component.yml  lvgl_adapter_init.c  main.cpp  model_mgr.cpp  model_mgr.h  sd_card_bg.c  sd_card_bg.h  uart_receiver.cpp  uart_receiver.h  ui.cpp  ui.cpp.bak  ui.h  volcano_rtc_service.c  volcano_rtc_service.h  web_dashboard.cpp  web_dashboard.h  xiaozhi_ai_service.c  xiaozhi_ai_service.h
